--- a/apps/index.html
+++ b/apps/index.html
@@ -2,234 +2,251 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>OpsOh Apps</title>
+  <title>All OpsOh apps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta
-    name="description"
-    content="Browse the collection of OpsOh apps for iPhone – simple, focused utilities built for everyday tasks."
-  />
-  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
-  <div class="page">
+  <header class="site-header">
+    <div class="site-header-inner">
+      <a href="/" class="brand">
+        <img src="/assets/img/opsoh-logo.png" alt="OpsOh logo" class="site-logo" />
+        <span class="brand-text">OpsOh</span>
+      </a>
+      <nav class="site-nav">
+        <a href="/" class="nav-link">Home</a>
+        <a href="/apps/" class="nav-link nav-link-active">Apps</a>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Top navigation -->
-    <header class="site-header">
-      <div class="site-header-inner">
-        <a href="/" class="brand">
-          <img src="../assets/img/opsoh-logo.png" alt="OpsOh" class="brand-logo" />
-          <span class="brand-name">OpsOh</span>
-        </a>
-        <nav class="nav">
-          <a href="/" class="nav-link">Home</a>
-          <a href="/apps/" class="nav-link nav-link-active">Apps</a>
-        </nav>
+  <main class="page">
+    <section class="hero hero-small">
+      <h1 class="hero-title">All OpsOh apps</h1>
+      <p class="hero-subtitle">
+        A small collection of focused utilities for iPhone. No accounts, no ads – just quick apps that
+        do one job well.
+      </p>
+    </section>
+
+    <section class="section">
+      <div class="section-header">
+        <h2 class="section-title">PDF tools</h2>
+        <p class="section-subtitle">
+          Lightweight utilities to clean, split, merge, scan, and export PDFs.
+        </p>
       </div>
-    </header>
 
-    <!-- Main content -->
-    <main class="main">
-
-      <!-- Apps intro -->
-      <section class="hero hero-compact">
-        <div class="hero-text">
-          <h1>All OpsOh apps</h1>
-          <p class="hero-lead">
-            A small collection of focused utilities for iPhone. No accounts, no ads –
-            just quick apps that do one job well.
-          </p>
-        </div>
-      </section>
-
-      <!-- PDF tools -->
-      <section class="section">
-        <div class="section-header">
-          <h2>PDF tools</h2>
-          <p class="section-subtitle">
-            Lightweight utilities to clean, split, merge, scan, and export PDFs.
-          </p>
-        </div>
-
-        <div class="app-grid app-grid-large">
-
-          <!-- Split Merge PDF -->
-          <article class="app-card">
-            <div class="app-card-header">
-              <img
-                src="../assets/img/split-merge-pdf.jpg"
-                alt="Split Merge PDF app icon"
-                class="app-icon"
-              />
-              <div>
-                <h3 class="app-title">Split Merge PDF</h3>
-                <p class="app-tagline">Split one PDF into many, or merge several into one.</p>
-              </div>
+      <div class="apps-grid">
+        <!-- Split Merge PDF -->
+        <article class="app-card">
+          <div class="app-card-header">
+            <div class="app-icon">
+              <img src="/assets/img/split-merge-pdf.jpg" alt="Split Merge PDF icon" class="app-icon-image" />
             </div>
-            <p class="app-meta">PDF tools · iPhone</p>
-            <div class="app-footer">
-              <a href="#" class="button-ghost">View on the App Store</a>
+            <div class="app-heading">
+              <h3 class="app-name">Split Merge PDF</h3>
+              <p class="app-tagline">
+                Split one PDF into many, or merge several into one.
+              </p>
             </div>
-          </article>
+          </div>
+          <div class="app-meta">
+            <span>PDF tools</span>
+            <span>iPhone</span>
+          </div>
+          <div class="app-footer">
+            <a
+              href="https://apps.apple.com/app/id6757105560"
+              class="button-outline"
+              target="_blank"
+              rel="noopener noreferrer"
+            >View on the App Store</a>
+          </div>
+        </article>
 
-          <!-- ScanSignPDF -->
-          <article class="app-card">
-            <div class="app-card-header">
-              <img
-                src="../assets/img/scansignpdf.jpg"
-                alt="ScanSignPDF app icon"
-                class="app-icon"
-              />
-              <div>
-                <h3 class="app-title">ScanSignPDF</h3>
-                <p class="app-tagline">Scan, sign, and export PDFs in seconds.</p>
-              </div>
+        <!-- ScanSignPDF -->
+        <article class="app-card">
+          <div class="app-card-header">
+            <div class="app-icon">
+              <img src="/assets/img/scansignpdf.jpg" alt="ScanSignPDF icon" class="app-icon-image" />
             </div>
-            <p class="app-meta">PDF tools · iPhone</p>
-            <div class="app-footer">
-              <a href="#" class="button-ghost">View on the App Store</a>
+            <div class="app-heading">
+              <h3 class="app-name">ScanSignPDF</h3>
+              <p class="app-tagline">
+                Scan, sign, and export PDFs in seconds.
+              </p>
             </div>
-          </article>
+          </div>
+          <div class="app-meta">
+            <span>PDF tools</span>
+            <span>iPhone</span>
+          </div>
+          <div class="app-footer">
+            <!-- Add App Store link once ready -->
+            <a href="#" class="button-outline">View on the App Store</a>
+          </div>
+        </article>
 
-          <!-- Images to PDF -->
-          <article class="app-card">
-            <div class="app-card-header">
-              <img
-                src="../assets/img/rename-photos.jpg"
-                alt="Images to PDF app icon"
-                class="app-icon"
-              />
-              <div>
-                <h3 class="app-title">Images to PDF</h3>
-                <p class="app-tagline">Turn your photos into clean, shareable PDFs.</p>
-              </div>
+        <!-- Images to PDF -->
+        <article class="app-card">
+          <div class="app-card-header">
+            <div class="app-icon">
+              <img src="/assets/img/rename-photos.jpg" alt="Images to PDF icon" class="app-icon-image" />
             </div>
-            <p class="app-meta">Photos · iPhone</p>
-            <div class="app-footer">
-              <span class="pill pill-soon">Coming soon</span>
+            <div class="app-heading">
+              <h3 class="app-name">Images to PDF</h3>
+              <p class="app-tagline">
+                Turn your photos into clean, shareable PDFs.
+              </p>
             </div>
-          </article>
+          </div>
+          <div class="app-meta">
+            <span>Photos</span>
+            <span>iPhone</span>
+          </div>
+          <div class="app-footer">
+            <span class="pill pill-soon">Coming soon</span>
+          </div>
+        </article>
 
-          <!-- PhotoPDF Maker -->
-          <article class="app-card">
-            <div class="app-card-header">
-              <img
-                src="../assets/img/photo-pdf-maker.png"
-                alt="PhotoPDF Maker app icon"
-                class="app-icon"
-              />
-              <div>
-                <h3 class="app-title">PhotoPDF Maker</h3>
-                <p class="app-tagline">Turn multiple photos into a single PDF in seconds.</p>
-              </div>
+        <!-- PhotoPDF Maker -->
+        <article class="app-card">
+          <div class="app-card-header">
+            <div class="app-icon">
+              <img src="/assets/img/photo-pdf-maker.png" alt="PhotoPDF Maker icon" class="app-icon-image" />
             </div>
-            <p class="app-meta">PDF tools · iPhone</p>
-            <div class="app-footer">
-              <a href="#" class="button-ghost">View on the App Store</a>
+            <div class="app-heading">
+              <h3 class="app-name">PhotoPDF Maker</h3>
+              <p class="app-tagline">
+                Turn multiple photos into a single PDF in seconds.
+              </p>
             </div>
-          </article>
-
-        </div>
-      </section>
-
-      <!-- Photos & files -->
-      <section class="section">
-        <div class="section-header">
-          <h2>Photos & files</h2>
-          <p class="section-subtitle">
-            Small helpers for screenshots, photos, and email attachments.
-          </p>
-        </div>
-
-        <div class="app-grid app-grid-large">
-
-          <!-- Clean Screenshot -->
-          <article class="app-card">
-            <div class="app-card-header">
-              <img
-                src="../assets/img/clean-screenshot.jpg"
-                alt="Clean Screenshot app icon"
-                class="app-icon"
-              />
-              <div>
-                <h3 class="app-title">Clean Screenshot</h3>
-                <p class="app-tagline">Remove status bars and clutter from screenshots.</p>
-              </div>
-            </div>
-            <p class="app-meta">Screenshots · iPhone</p>
-            <div class="app-footer">
-              <span class="pill pill-soon">Coming soon</span>
-            </div>
-          </article>
-
-          <!-- Photo HEIC to JPEG -->
-          <article class="app-card">
-            <div class="app-card-header">
-              <img
-                src="../assets/img/heic-to-jpeg.jpg"
-                alt="Photo HEIC to JPEG app icon"
-                class="app-icon"
-              />
-              <div>
-                <h3 class="app-title">Photo HEIC to JPEG</h3>
-                <p class="app-tagline">Convert HEIC photos to JPEG for easy sharing.</p>
-              </div>
-            </div>
-            <p class="app-meta">Photos · iPhone</p>
-            <div class="app-footer">
-              <a href="#" class="button-ghost">View on the App Store</a>
-            </div>
-          </article>
-
-          <!-- Attachments to PDF -->
-          <article class="app-card">
-            <div class="app-card-header">
-              <img
-                src="../assets/img/attachement-to-pdf.jpg"
-                alt="Attachments to PDF app icon"
-                class="app-icon"
-              />
-              <div>
-                <h3 class="app-title">Attachments to PDF</h3>
-                <p class="app-tagline">Turn email attachments into a single PDF.</p>
-              </div>
-            </div>
-            <p class="app-meta">Files · iPhone</p>
-            <div class="app-footer">
-              <a href="#" class="button-ghost">View on the App Store</a>
-            </div>
-          </article>
-
-        </div>
-      </section>
-
-      <!-- Support -->
-      <section class="section">
-        <div class="section-header">
-          <h2>Support</h2>
-          <p class="section-subtitle">
-            Need help with an app, found a bug, or have an idea?
-          </p>
-        </div>
-
-        <div class="contact-card">
-          <p>
-            Email
-            <a href="mailto:support@opsoh.com">support@opsoh.com</a>
-            with the app name and a short description. Screenshots are always welcome.
-          </p>
-        </div>
-      </section>
-
-    </main>
-
-    <!-- Footer -->
-    <footer class="site-footer">
-      <div class="site-footer-inner">
-        <p>© 2026 OpsOh. Small, focused apps for everyday tasks.</p>
-        <a href="https://opsoh.github.io/opsoh-privacy/" class="footer-link">Privacy Policy</a>
+          </div>
+          <div class="app-meta">
+            <span>PDF tools</span>
+            <span>iPhone</span>
+          </div>
+          <div class="app-footer">
+            <!-- Add App Store link once you have the URL -->
+            <a href="#" class="button-outline">View on the App Store</a>
+          </div>
+        </article>
       </div>
-    </footer>
+    </section>
 
-  </div>
+    <section class="section">
+      <div class="section-header">
+        <h2 class="section-title">Photos &amp; files</h2>
+        <p class="section-subtitle">
+          Small helpers for screenshots, photos, and email attachments.
+        </p>
+      </div>
+
+      <div class="apps-grid">
+        <!-- Clean Screenshot -->
+        <article class="app-card">
+          <div class="app-card-header">
+            <div class="app-icon">
+              <img src="/assets/img/clean-screenshot.jpg" alt="Clean Screenshot icon" class="app-icon-image" />
+            </div>
+            <div class="app-heading">
+              <h3 class="app-name">Clean Screenshot</h3>
+              <p class="app-tagline">
+                Remove status bars and clutter from screenshots.
+              </p>
+            </div>
+          </div>
+          <div class="app-meta">
+            <span>Screenshots</span>
+            <span>iPhone</span>
+          </div>
+          <div class="app-footer">
+            <span class="pill pill-soon">Coming soon</span>
+          </div>
+        </article>
+
+        <!-- Photo HEIC to JPEG -->
+        <article class="app-card">
+          <div class="app-card-header">
+            <div class="app-icon">
+              <img src="/assets/img/heic-to-jpeg.jpg" alt="Photo HEIC to JPEG icon" class="app-icon-image" />
+            </div>
+            <div class="app-heading">
+              <h3 class="app-name">Photo HEIC to JPEG</h3>
+              <p class="app-tagline">
+                Convert HEIC photos to JPEG so they work everywhere.
+              </p>
+            </div>
+          </div>
+          <div class="app-meta">
+            <span>Photos</span>
+            <span>iPhone</span>
+          </div>
+          <div class="app-footer">
+            <a
+              href="https://apps.apple.com/app/id6756975312"
+              class="button-outline"
+              target="_blank"
+              rel="noopener noreferrer"
+            >View on the App Store</a>
+          </div>
+        </article>
+
+        <!-- Attachments to PDF -->
+        <article class="app-card">
+          <div class="app-card-header">
+            <div class="app-icon">
+              <img src="/assets/img/attachments-to-pdf.jpeg" alt="Attachments to PDF icon" class="app-icon-image" />
+            </div>
+            <div class="app-heading">
+              <h3 class="app-name">Attachments to PDF</h3>
+              <p class="app-tagline">
+                Turn email attachments into a single PDF.
+              </p>
+            </div>
+          </div>
+          <div class="app-meta">
+            <span>Files</span>
+            <span>iPhone</span>
+          </div>
+          <div class="app-footer">
+            <a
+              href="https://apps.apple.com/app/id6757130391"
+              class="button-outline"
+              target="_blank"
+              rel="noopener noreferrer"
+            >View on the App Store</a>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="section-header">
+        <h2 class="section-title">Support</h2>
+        <p class="section-subtitle">
+          Need help with an app, found a bug, or have an idea?
+        </p>
+      </div>
+      <div class="contact-card">
+        <p>
+          Email <a href="mailto:support@opsoh.com">support@opsoh.com</a> with the app name and a short
+          description. Screenshots are always welcome.
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="site-footer-inner">
+      <span>© 2026 OpsOh. Small, focused apps for everyday tasks.</span>
+      <a
+        href="https://opsoh.github.io/opsoh-privacy/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >Privacy Policy</a>
+    </div>
+  </footer>
 </body>
 </html>
