--- a/index.html
+++ b/index.html
@@ -4,242 +4,290 @@
   <meta charset="UTF-8" />
   <title>OpsOh – Apps for everyday tasks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="OpsOh builds curated, focused apps for iPhone. No accounts, no ads – just fast, on-device tools that do one job well."
+  />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  <header class="site-header">
-    <div class="site-header-inner">
-      <a href="/" class="brand">
-        <img src="/assets/img/opsoh-logo.png" alt="OpsOh logo" class="site-logo" />
-        <span class="brand-text">OpsOh</span>
-      </a>
-      <nav class="site-nav">
-        <a href="/" class="nav-link nav-link-active">Home</a>
-        <a href="/apps/" class="nav-link">Apps</a>
-      </nav>
-    </div>
-  </header>
+  <div class="page">
 
-  <main class="page">
-    <section class="hero">
-      <h1 class="hero-title">Apps for everyday tasks.</h1>
-      <p class="hero-subtitle">
-        OpsOh builds small, focused apps for iPhone. No accounts, no ads – just fast,
-        on-device tools that do one job well.
-      </p>
-      <p class="hero-meta">
-        • Built for iOS • On-device processing • No subscriptions
-      </p>
-      <div class="hero-actions">
-        <a href="/apps/" class="button-primary">Browse all apps</a>
+    <!-- Header -->
+    <header class="site-header">
+      <div class="site-header-inner container">
+        <a href="/" class="brand">
+          <img src="assets/img/opsoh-logo.png" alt="OpsOh logo" class="brand-logo" />
+          <span class="brand-name">OpsOh</span>
+        </a>
+
+        <nav class="site-nav">
+          <a href="/" class="nav-link nav-link-active">Home</a>
+          <a href="/apps/" class="nav-link">Apps</a>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+
+      <!-- Hero -->
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Apps for everyday tasks.</h1>
+          <p class="hero-subtitle">
+            OpsOh builds curated, focused apps for iPhone. No accounts, no ads – just fast,
+            on-device tools that do one job well.
+          </p>
+          <p class="hero-bullets">
+            • Built for iOS &nbsp;•&nbsp; On-device processing &nbsp;•&nbsp; No subscriptions
+          </p>
+
+          <div class="hero-actions">
+            <a href="/apps/" class="button-primary">Browse all apps</a>
+
+            <a
+              href="https://apps.apple.com/us/developer/giorgio-vitali/id1855313963"
+              class="app-store-link"
+            >
+              <img
+                src="assets/img/_App_Store_Badge_US.svg"
+                alt="Download OpsOh apps on the App Store"
+                class="app-store-badge"
+              />
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Featured apps -->
+      <section class="section">
+        <div class="container">
+          <div class="section-header">
+            <h2 class="section-title">Featured apps</h2>
+            <p class="section-caption">A few of the apps available today.</p>
+          </div>
+
+          <div class="apps-grid">
+            <!-- Clean Screenshot – coming soon -->
+            <article class="app-card">
+              <div class="app-card-header">
+                <img
+                  src="assets/img/clean-screenshot.jpeg"
+                  alt="Clean Screenshot app icon"
+                  class="app-icon"
+                />
+                <div>
+                  <h3 class="app-name">Clean Screenshot</h3>
+                  <p class="app-summary">
+                    Remove status bars and clutter from screenshots.
+                  </p>
+                </div>
+              </div>
+              <p class="app-meta">Screenshots · iPhone</p>
+              <div class="app-footer">
+                <span class="pill pill-muted">Coming soon</span>
+              </div>
+            </article>
+
+            <!-- Split Merge PDF -->
+            <article class="app-card">
+              <div class="app-card-header">
+                <img
+                  src="assets/img/split-merge-pdf.jpg"
+                  alt="Split Merge PDF app icon"
+                  class="app-icon"
+                />
+                <div>
+                  <h3 class="app-name">Split Merge PDF</h3>
+                  <p class="app-summary">
+                    Split one PDF into many, or merge several into one.
+                  </p>
+                </div>
+              </div>
+              <p class="app-meta">PDF tools · iPhone</p>
+              <div class="app-footer">
+                <a
+                  href="https://apps.apple.com/za/app/split-merge-pdf/id6757105560"
+                  class="text-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  View
+                </a>
+              </div>
+            </article>
+
+            <!-- ScanSignPDF -->
+            <article class="app-card">
+              <div class="app-card-header">
+                <img
+                  src="assets/img/scansignpdf.jpg"
+                  alt="ScanSignPDF app icon"
+                  class="app-icon"
+                />
+                <div>
+                  <h3 class="app-name">ScanSignPDF</h3>
+                  <p class="app-summary">
+                    Scan, sign, and export PDFs in seconds.
+                  </p>
+                </div>
+              </div>
+              <p class="app-meta">PDF tools · iPhone</p>
+              <div class="app-footer">
+                <a
+                  href="https://apps.apple.com/ca/app/scansignpdf/id6756794624"
+                  class="text-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  View
+                </a>
+              </div>
+            </article>
+
+            <!-- Images to PDF – coming soon -->
+            <article class="app-card">
+              <div class="app-card-header">
+                <img
+                  src="assets/img/rename-photos.jpg"
+                  alt="Images to PDF app placeholder icon"
+                  class="app-icon"
+                />
+                <div>
+                  <h3 class="app-name">Images to PDF</h3>
+                  <p class="app-summary">
+                    Turn your photos into clean, shareable PDFs.
+                  </p>
+                </div>
+              </div>
+              <p class="app-meta">Photos · iPhone</p>
+              <div class="app-footer">
+                <span class="pill pill-muted">Coming soon</span>
+              </div>
+            </article>
+
+            <!-- Photo HEIC to JPEG -->
+            <article class="app-card">
+              <div class="app-card-header">
+                <img
+                  src="assets/img/heic-to-jpeg.jpg"
+                  alt="Photo HEIC to JPEG app icon"
+                  class="app-icon"
+                />
+                <div>
+                  <h3 class="app-name">Photo HEIC to JPEG</h3>
+                  <p class="app-summary">
+                    Convert HEIC photos to JPEG for easy sharing.
+                  </p>
+                </div>
+              </div>
+              <p class="app-meta">Photos · iPhone</p>
+              <div class="app-footer">
+                <a
+                  href="https://apps.apple.com/us/app/photo-heic-to-jpeg/id6756975312"
+                  class="text-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  View
+                </a>
+              </div>
+            </article>
+
+            <!-- Attachments to PDF -->
+            <article class="app-card">
+              <div class="app-card-header">
+                <img
+                  src="assets/img/attachments-to-pdf.jpg"
+                  alt="Attachments to PDF app icon"
+                  class="app-icon"
+                />
+                <div>
+                  <h3 class="app-name">Attachments to PDF</h3>
+                  <p class="app-summary">
+                    Turn email attachments into a single PDF in seconds.
+                  </p>
+                </div>
+              </div>
+              <p class="app-meta">Files · iPhone</p>
+              <div class="app-footer">
+                <a
+                  href="https://apps.apple.com/us/app/attachments-to-pdf/id6757130391"
+                  class="text-link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  View
+                </a>
+              </div>
+            </article>
+
+            <!-- PhotoPDF Maker -->
+            <article class="app-card">
+              <div class="app-card-header">
+                <img
+                  src="assets/img/photo-pdf-maker.png"
+                  alt="PhotoPDF Maker app icon"
+                  class="app-icon"
+                />
+                <div>
+                  <h3 class="app-name">PhotoPDF Maker</h3>
+                  <p class="app-summary">
+                    Turn multiple photos into a single PDF in seconds.
+                  </p>
+                </div>
+              </div>
+              <p class="app-meta">PDF tools · iPhone</p>
+              <div class="app-footer">
+                <!-- Link once the public App Store URL is available -->
+                <span class="pill pill-muted">New</span>
+              </div>
+            </article>
+          </div>
+
+          <div class="section-footer">
+            <a href="/apps/" class="text-link">Browse all apps →</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact -->
+      <section class="section">
+        <div class="container">
+          <div class="section-header">
+            <h2 class="section-title">Contact</h2>
+            <p class="section-caption">
+              Questions, ideas, or feedback about OpsOh apps? Get in touch.
+            </p>
+          </div>
+
+          <div class="contact-card">
+            <p>
+              Email
+              <a href="mailto:support@opsoh.com">support@opsoh.com</a>
+              and we’ll get back to you as soon as we can.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <p class="footer-copy">
+          © 2026 OpsOh. Focused apps for everyday tasks.
+        </p>
         <a
-          href="https://apps.apple.com/us/developer/giorgio-vitali/id1855313963"
-          class="app-store-link"
+          href="https://opsoh.github.io/opsoh-privacy/"
+          class="footer-link"
+          target="_blank"
+          rel="noopener noreferrer"
         >
-          <img
-            src="/assets/img/_App_Store_Badge_US.svg"
-            alt="Download OpsOh apps on the App Store"
-            class="app-store-badge"
-          />
+          Privacy Policy
         </a>
       </div>
-    </section>
-
-    <section class="section">
-      <div class="section-header">
-        <h2 class="section-title">Featured apps</h2>
-        <p class="section-subtitle">A few of the apps available today.</p>
-      </div>
-
-      <div class="apps-grid">
-        <!-- Clean Screenshot -->
-        <article class="app-card">
-          <div class="app-card-header">
-            <div class="app-icon">
-              <img src="/assets/img/clean-screenshot.jpg" alt="Clean Screenshot icon" class="app-icon-image" />
-            </div>
-            <div class="app-heading">
-              <h3 class="app-name">Clean Screenshot</h3>
-              <p class="app-tagline">Remove status bars and clutter from screenshots.</p>
-            </div>
-          </div>
-          <div class="app-meta">
-            <span>Screenshots</span>
-            <span>iPhone</span>
-          </div>
-          <div class="app-footer">
-            <span class="pill pill-soon">Coming soon</span>
-          </div>
-        </article>
-
-        <!-- Split Merge PDF -->
-        <article class="app-card">
-          <div class="app-card-header">
-            <div class="app-icon">
-              <img src="/assets/img/split-merge-pdf.jpg" alt="Split Merge PDF icon" class="app-icon-image" />
-            </div>
-            <div class="app-heading">
-              <h3 class="app-name">Split Merge PDF</h3>
-              <p class="app-tagline">Split one PDF into many, or merge several into one.</p>
-            </div>
-          </div>
-          <div class="app-meta">
-            <span>PDF tools</span>
-            <span>iPhone</span>
-          </div>
-          <div class="app-footer">
-            <a
-              href="https://apps.apple.com/app/id6757105560"
-              class="app-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >View</a>
-          </div>
-        </article>
-
-        <!-- ScanSignPDF -->
-        <article class="app-card">
-          <div class="app-card-header">
-            <div class="app-icon">
-              <img src="/assets/img/scansignpdf.jpg" alt="ScanSignPDF icon" class="app-icon-image" />
-            </div>
-            <div class="app-heading">
-              <h3 class="app-name">ScanSignPDF</h3>
-              <p class="app-tagline">Scan, sign, and export PDFs in seconds.</p>
-            </div>
-          </div>
-          <div class="app-meta">
-            <span>PDF tools</span>
-            <span>iPhone</span>
-          </div>
-          <div class="app-footer">
-            <!-- Add App Store link here once ready -->
-            <a href="#" class="app-link">View</a>
-          </div>
-        </article>
-
-        <!-- Images to PDF -->
-        <article class="app-card">
-          <div class="app-card-header">
-            <div class="app-icon">
-              <img src="/assets/img/rename-photos.jpg" alt="Images to PDF icon" class="app-icon-image" />
-            </div>
-            <div class="app-heading">
-              <h3 class="app-name">Images to PDF</h3>
-              <p class="app-tagline">Turn your photos into clean, shareable PDFs.</p>
-            </div>
-          </div>
-          <div class="app-meta">
-            <span>Photos</span>
-            <span>iPhone</span>
-          </div>
-          <div class="app-footer">
-            <span class="pill pill-soon">Coming soon</span>
-          </div>
-        </article>
-
-        <!-- Photo HEIC to JPEG -->
-        <article class="app-card">
-          <div class="app-card-header">
-            <div class="app-icon">
-              <img src="/assets/img/heic-to-jpeg.jpg" alt="Photo HEIC to JPEG icon" class="app-icon-image" />
-            </div>
-            <div class="app-heading">
-              <h3 class="app-name">Photo HEIC to JPEG</h3>
-              <p class="app-tagline">Convert HEIC photos to JPEG for easy sharing.</p>
-            </div>
-          </div>
-          <div class="app-meta">
-            <span>Photos</span>
-            <span>iPhone</span>
-          </div>
-          <div class="app-footer">
-            <a
-              href="https://apps.apple.com/app/id6756975312"
-              class="app-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >View</a>
-          </div>
-        </article>
-
-        <!-- Attachments to PDF -->
-        <article class="app-card">
-          <div class="app-card-header">
-            <div class="app-icon">
-              <img src="/assets/img/attachments-to-pdf.jpeg" alt="Attachments to PDF icon" class="app-icon-image" />
-            </div>
-            <div class="app-heading">
-              <h3 class="app-name">Attachments to PDF</h3>
-              <p class="app-tagline">Turn email attachments into a single PDF.</p>
-            </div>
-          </div>
-          <div class="app-meta">
-            <span>Files</span>
-            <span>iPhone</span>
-          </div>
-          <div class="app-footer">
-            <a
-              href="https://apps.apple.com/app/id6757130391"
-              class="app-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >View</a>
-          </div>
-        </article>
-
-        <!-- PhotoPDF Maker -->
-        <article class="app-card">
-          <div class="app-card-header">
-            <div class="app-icon">
-              <img src="/assets/img/photo-pdf-maker.png" alt="PhotoPDF Maker icon" class="app-icon-image" />
-            </div>
-            <div class="app-heading">
-              <h3 class="app-name">PhotoPDF Maker</h3>
-              <p class="app-tagline">Turn multiple photos into a single PDF in seconds.</p>
-            </div>
-          </div>
-          <div class="app-meta">
-            <span>PDF tools</span>
-            <span>iPhone</span>
-          </div>
-          <div class="app-footer">
-            <!-- Add App Store link here once you have the URL -->
-            <a href="#" class="app-link">View</a>
-          </div>
-        </article>
-      </div>
-
-      <div class="section-footer">
-        <a href="/apps/" class="browse-link">Browse all apps →</a>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="section-header">
-        <h2 class="section-title">Contact</h2>
-        <p class="section-subtitle">
-          Questions, ideas, or feedback about OpsOh apps? Get in touch.
-        </p>
-      </div>
-      <div class="contact-card">
-        <p>
-          Email <a href="mailto:support@opsoh.com">support@opsoh.com</a> and we’ll get back to you as
-          soon as we can.
-        </p>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="site-footer-inner">
-      <span>© 2026 OpsOh. Small, focused apps for everyday tasks.</span>
-      <a
-        href="https://opsoh.github.io/opsoh-privacy/"
-        target="_blank"
-        rel="noopener noreferrer"
-      >Privacy Policy</a>
-    </div>
-  </footer>
+    </footer>
+  </div>
 </body>
 </html>
