--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="site-header">
       <div class="site-header-inner container">
         <a href="/" class="brand">
-          <img src="assets/img/opsoh-logo.png" alt="OpsOh logo" class="brand-logo" />
+          <img src="/assets/img/opsoh-logo.png" alt="OpsOh logo" class="brand-logo" />
           <span class="brand-name">OpsOh</span>
         </a>
 
@@ -50,7 +50,7 @@
               class="app-store-link"
             >
               <img
-                src="assets/img/_App_Store_Badge_US.svg"
+                src="/assets/img/_App_Store_Badge_US.svg"
                 alt="Download OpsOh apps on the App Store"
                 class="app-store-badge"
               />
@@ -72,7 +72,7 @@
             <article class="app-card">
               <div class="app-card-header">
                 <img
-                  src="assets/img/clean-screenshot.jpeg"
+                  src="/assets/img/clean-screenshot.jpeg"
                   alt="Clean Screenshot app icon"
                   class="app-icon"
                 />
@@ -93,7 +93,7 @@
             <article class="app-card">
               <div class="app-card-header">
                 <img
-                  src="assets/img/split-merge-pdf.jpg"
+                  src="/assets/img/split-merge-pdf.jpg"
                   alt="Split Merge PDF app icon"
                   class="app-icon"
                 />
@@ -121,7 +121,7 @@
             <article class="app-card">
               <div class="app-card-header">
                 <img
-                  src="assets/img/scansignpdf.jpg"
+                  src="/assets/img/scansignpdf.jpg"
                   alt="ScanSignPDF app icon"
                   class="app-icon"
                 />
@@ -149,7 +149,7 @@
             <article class="app-card">
               <div class="app-card-header">
                 <img
-                  src="assets/img/rename-photos.jpg"
+                  src="/assets/img/rename-photos.jpg"
                   alt="Images to PDF app placeholder icon"
                   class="app-icon"
                 />
@@ -170,7 +170,7 @@
             <article class="app-card">
               <div class="app-card-header">
                 <img
-                  src="assets/img/heic-to-jpeg.jpg"
+                  src="/assets/img/heic-to-jpeg.jpg"
                   alt="Photo HEIC to JPEG app icon"
                   class="app-icon"
                 />
@@ -198,7 +198,7 @@
             <article class="app-card">
               <div class="app-card-header">
                 <img
-                  src="assets/img/attachments-to-pdf.jpg"
+                  src="/assets/img/attachments-to-pdf.jpg"
                   alt="Attachments to PDF app icon"
                   class="app-icon"
                 />
@@ -226,7 +226,7 @@
             <article class="app-card">
               <div class="app-card-header">
                 <img
-                  src="assets/img/photo-pdf-maker.png"
+                  src="/assets/img/photo-pdf-maker.png"
                   alt="PhotoPDF Maker app icon"
                   class="app-icon"
                 />
@@ -239,8 +239,8 @@
               </div>
               <p class="app-meta">PDF tools · iPhone</p>
               <div class="app-footer">
-                <!-- Link once the public App Store URL is available -->
                 <span class="pill pill-muted">New</span>
+                <!-- Add App Store link here when you have it -->
               </div>
             </article>
           </div>
